[gd_scene load_steps=4 format=3 uid="uid://dwg1da6g0srl4"]

[ext_resource type="Script" path="res://application.gd" id="1_tjsr3"]

[sub_resource type="LabelSettings" id="LabelSettings_dejhj"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_7y2jy"]
font_size = 32

[node name="Application" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tjsr3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0470588, 0.0470588, 0.0470588, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 400.0
offset_bottom = 70.0
theme_override_constants/separation = 12
alignment = 1

[node name="Stopwatch" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "03:00:00"
label_settings = SubResource("LabelSettings_dejhj")
vertical_alignment = 1

[node name="StopwatchMS" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 70)
layout_mode = 2
text = "000"
label_settings = SubResource("LabelSettings_7y2jy")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
alignment = 1

[node name="TimerControl" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="ResetTimer" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Reset"

[node name="TrijamTimer" type="Timer" parent="."]
wait_time = 10800.0
one_shot = true

[connection signal="pressed" from="HBoxContainer/VBoxContainer/TimerControl" to="." method="control_timer"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ResetTimer" to="." method="reset_timer"]
